--- a/style.css
+++ b/style.css
@@ -497,6 +497,37 @@ font-size: 1.6em;
      .head-2{
         margin: 4px;
      }
-     
-     
-     
+    footer .container{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        background-color: aliceblue;
+        padding: 80px 12px;
+    }
+    .introfot{
+        color: orange;
+        font-family: 'Josefin Sans', sans-serif;
+    }
+    .foot h4 a{
+    list-style: none;
+    text-decoration: none;
+    color: orange;
+    font-family: 'Josefin Sans', sans-serif;
+    }
+    .foot h3{
+        color: orange;
+        padding: 8px;
+    }
+    .foot h4{
+        color:orange;
+        font-family: 'Josefin Sans', sans-serif;
+        padding: 5px;
+    }
+    footer p{
+        text-align: center;
+        background-color: orange;
+        color: white;
+        font-family: 'Josefin Sans', sans-serif;
+        font-size: larger;
+        padding: 12px;
+    }
