--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@ button{
 button:hover{
     background-color: orange;
     color: white;
-
 }
 .maincontent-about {
     background-image: url("img/contact-pages.png");
@@ -503,6 +502,7 @@ font-size: 1.6em;
         align-items: center;
         background-color: aliceblue;
         padding: 80px 12px;
+        flex-wrap: wrap;
     }
     .introfot{
         color: orange;
